log
Wed 15 Mar 2023 06:16:24 PM UTC: 
 tests:  0|7
total_score: 0/70
e966bb9
Wed 15 Mar 2023 06:16:44 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5a8f454
Wed 15 Mar 2023 06:19:20 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
b03a693
Wed 15 Mar 2023 06:31:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
6999280
Wed 15 Mar 2023 10:27:04 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:39: error: ‘Vectorector’ undeclared (first use in this function)
   83 |    Vector *aux=(Vector*)calloc(sizeof(Vectorector));
      |                                       ^~~~~~~~~~~
exercises.c:83:39: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:25: error: too few arguments to function ‘calloc’
   83 |    Vector *aux=(Vector*)calloc(sizeof(Vectorector));
      |                         ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
c1bd85f
Wed 15 Mar 2023 10:30:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:25: error: too few arguments to function ‘calloc’
   83 |    Vector *aux=(Vector*)calloc(sizeof(Vector));
      |                         ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
738a83f
Wed 15 Mar 2023 11:52:20 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
2221ab6
Wed 15 Mar 2023 11:53:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
5c6a6ef
Wed 15 Mar 2023 11:55:25 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|2
total_score: 50/70
dc64093
